[package]
name = "sleigh2macro"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rbran/sleigh2macro"
license = "MIT"
description = "Macro used to transpile Ghidra code into rust"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sleigh2rust = { path = "../sleigh2rust", version = "0.1" }
quote = "1"
proc-macro2 = "1"
litrs = "0.4.0"
